--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <div style="display: flex; justify-content: center; align-items: center;">
             <div id="phaser-game"></div>
         </div>
+        <div>
+            
+        </div>
     </div>
 </body>
 </html>
