--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
         <div style="display: flex; justify-content: center; align-items: center;">
             <div id="phaser-game"></div>
         </div>
+        <p style="max-width: 500px; width: 100%; text-align: center; margin: 30px auto 0px; font-size: 10pt; font-weight: 500; font-family: sans-serif;">
+            Recuerda saltar con la la tecla ESPACIO o con la fecla que apunta hacia arria. Recoge 5 Tomi8 y gana el juego.
+        </p>
         <div>
-            
+
         </div>
     </div>
 </body>
