--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <style>
     @media (min-width: 721px) {
-        /* .mobile{
+        .mobile{
             display: none;
-        } */
+        }
     }
-    @media (max-width: 3720px) {
+    @media (max-width: 720px) {
         .mobile{
             display: flex;
             justify-content: center;
