--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </p>
         </div>
         <div style="display: flex; justify-content: center; align-items: center;">
-            <div style="max-width: 800px; overflow: hidden" id="phaser-game"></div>
+            <div style="max-width: 800px; overflow: hidden; max-height: 400px;" id="phaser-game"></div>
         </div>
         <div class="mobile">
             <button id="jump">Saltar</button>
