--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <p style="max-width: 500px; width: 100%; text-align: center; margin: 30px auto 0px; font-size: 10pt; font-weight: 500; font-family: sans-serif;">
             Recuerda saltar con la la tecla ESPACIO o con la fecla que apunta hacia arria. Recoge 5 Tomi8 y gana el juego.
         </p>
-        <div style="margin: 20px auto; max-width: 500px;">
-            <img width="100%" src="./assets//images/todos.JPG" alt="">
+        <div style="margin: 20px auto; max-width: 460px;">
+            <img width="100%" src="https://storage.googleapis.com/videos_platform/tomi8/IMG_3546.jpg" alt="">
         </div>
         
     </div>
