--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div style="text-align: center; margin-bottom: 30px;">
             <h2 id="title" style="font-size: 22pt; font-weight: 700; font-family: sans-serif;">Bienvenidos a Tomi Game</h2>
             <p style="max-width: 600px; width: 100%; text-align: center; margin: 10px auto; font-size: 12pt; font-weight: 500; font-family: sans-serif;">
-                Ayuda a Tomisito a escapar de los zombies, recuerda que todos somos Tomi.
+                Ayuda a Tomisito a escapar de los zombies, Sí ganas, recuerda enviar un screenshot al grupo de #5Aniversatrio y ganate una hamburguesa
             </p>
         </div>
         <div style="display: flex; justify-content: center; align-items: center;">
